# Fractals

./: README.md  julia.py
MandelbrotCUDA/: CMakeLists.txt  main.cpp  mandelbrot.cu  mandelbrot.cuh  move.cpp  move.h
explorer/: CMakeLists.txt  main.cpp
mandelbrotSet/: mandelbrot.py
